fix spacing issue on small-screen navigation

--- a/CircleWellness.scss
+++ b/CircleWellness.scss
@@ -2988,6 +2988,10 @@ footer.entry-meta {
         vertical-align: 2px;
     }
 
+    .toggle-on .nav-menu {
+        margin-bottom: 20px;
+    }
+
     .toggled-on .nav-menu,
     .toggled-on .nav-menu > ul {
         display: block;
